#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-85
2016-07-21 Mikhail S. Dubrovin
- CalibFileFinder.py - add methods deploy_calib_file(...), deploy_calib_array(...) and self-tests PSAS-148
	
Tag: V00-02-84
2016-07-20 Mikhail S. Dubrovin
- fix problem with propagation of the default pix_scale_size
M       include/SegGeometryMatrixV1.h
M       include/SegGeometryStore.h
M       src/SegGeometryMatrixV1.cpp

Tag: V00-02-83
2016-07-19 Mikhail S. Dubrovin
- add support for matrix-like geometry segments with name like MTRX:512:512:54:54
M       src/SegGeometryMatrixV1.cpp
M       include/SegGeometryMatrixV1.h
M       include/SegGeometryStore.h

Tag: V00-02-82
2016-07-18 Mikhail S. Dubrovin
- GeometryAccess.py - update documentation for skipped methods.

Tag: V00-02-81
2016-07-11 Mikhail S. Dubrovin
- for Epix100 mask two central rows of wide pixels (in addition to two central columns) PSAS-148
M       src/SegGeometryEpix100V1.cpp
M       src/SegGeometryEpix100V1.py

Tag: V00-02-80
2016-06-30 Mikhail S. Dubrovin
- CalibParsStore.h - add support for Ryonix

Tag: V00-02-79
2016-06-23 Christopher O'Grady
assert in CalibFileFinder if calib-dir does not exist.  Done to try to
detect mount failures on the mon nodes.

Tag: V00-02-78
2016-06-13 Mikhail S. Dubrovin
- force all methods to return mask of dtype=np.uint8
M       src/GlobalUtils.py
M       src/SegGeometryCspad2x1V1.py
M       src/SegGeometryEpix100V1.py
M       src/SegGeometryMatrixV1.py

Tag: V00-02-77
2016-06-06 Mikhail S. Dubrovin
- GeometryAccess.py/h/cpp - add methods get_pixel_xy_at_z, get_pixel_xy_inds_at_z PSAS-148

Tag: V00-02-76
2016-05-18 Mikhail S. Dubrovin