@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-86
+2016-08-05 Mikhail S. Dubrovin
+- Change epix100 wide pixel size from 200um to 175um (PSAS-148)
+M       src/SegGeometryEpix100V1.cpp
+M       src/SegGeometryEpix100V1.py
+
 Tag: V00-02-85
 2016-07-21 Mikhail S. Dubrovin
 - CalibFileFinder.py - add methods deploy_calib_file(...), deploy_calib_array(...) and self-tests PSAS-148
